--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
   </head>
   <body>
