--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.1/dist/cirrus.min.css">
   </head>
   <body>
+    <div class="header header-fixed unselectabled header-animated">
+      <div class="header-brand">
+        <div class="nav-item no-hover">
+          <h6 class="title">{{site.title}}</h6>
+        </div>
+      </div>
+    </div>
+    <section class="section">
