--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,10 +13,11 @@
 </section>
 
 {% assign jobs = site.jobs | where: "published", true %}
+{% assign count = jobs | size %}
 
 {% if page.showjobs %}
-  {% if jobs | size  > 0 %}
-    <h2>Всего вакансий: {{ jobs | size }}</h2>
+  {% if count > 0 %}
+    <h2>Всего вакансий: {{ count }}</h2>
     <ul>{% for job in jobs %}
       <li>{{ job.title }} - {{ job.date}}</li>
       {% endfor %}</ul>
