--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -28,16 +28,8 @@
           <i class="fa fa-wrapper fa-coffee x-large"></i>
         </span>
       </div>
-      <h6 class="placeholder-title">В данный момент все трудоустроены.</h6>
-      <div class="placeholder-subtitle">Возвращайтесь позже или бросьте мне письмо.</div>
-      <div class="placeholder-commands u-center">
-        <div class="btn-container">
-          <button class="btn-primary">Refresh</button>
-        </div>
-        <div class="btn-container">
-        <button>Home</button>
-        </div>
-      </div>
+      <h6 class="placeholder-title">{{ site.data.vars.nojobheader}}</h6>
+      <div class="placeholder-subtitle">{{ site.data.vars.nojobsubheader}}</div>
     </div>
   {% endif %}
 {% endif %}
