--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,9 +18,29 @@
 {% if page.showjobs %}
   {% if jobs.size > 0 %}
     <h2>Всего вакансий: {{ jobs.size }}</h2>
-    <ul>{% for job in jobs %}
-      <li>{{ job.title }} - {{ job.date}}</li>
-      {% endfor %}</ul>
+    {% for job in jobs %}
+      <div class="card slide-up">
+        <div class="card-container">
+          <div class="card-image" style="background-image: url(https://unsplash.it/640/480?random&blur)"></div>
+        </div>
+        <div class="mobile-title">
+          <div class="content">
+            <div class="tile">
+              <div class="tile__container">
+                <p class="tile__title">{{ job.title }}</p>
+                <p class="tile__subtitle">By John Doe</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body content">
+          <p>{{ job.content }}</p>
+        </div>
+        <div class="card-footer content">
+          {{ job.date }}
+        </div>
+      </div>
+    {% endfor %}
   {% else %}
     <div class="placeholder">
       <div class="placeholder-icon">
