--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <div class="header header-fixed unselectabled header-animated">
       <div class="header-brand">
         <div class="nav-item no-hover">
-          <h6 class="title">{{site.title}}</h6>
+          <h6 class="title">{{site.data.vars.title}}</h6>
         </div>
       </div>
     </div>{% endif %}
