--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@
       <div class="content">
         <div class="text-center">
           <h1>{{ page.header }}</h1>
-          <h6 class="font-alt font-light">{{ page.subheader }}</h6>
+          <h6 class="font-light">{{ page.subheader }}</h6>
         </div>
       </div>
     </div>
