--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,22 @@
     <title>{{ page.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.1/dist/cirrus.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.1/dist/cirrus.min.css">-->
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
   </head>
   <body>
     {% if site.data.vars.shownavbar %}
-    <div class="header header-fixed unselectabled header-animated">
-      <div class="header-brand">
-        <div class="nav-item no-hover">
-          <h6 class="title">{{site.data.vars.title}}</h6>
-        </div>
-      </div>
-    </div>{% endif %}
+    <header class="navbar">
+      <section class="navbar-section">
+        <a href="#" class="btn btn-link">Docs</a>
+        <a href="#" class="btn btn-link">Examples</a>
+      </section>
+      <section class="navbar-center">
+      <!--     <span>{{ site.data.vars.title }}</span> -->
+        <img src="https://picturepan2.github.io/spectre/img/spectre-logo.svg">
+      </section>
+      <section class="navbar-section">
+        <a href="#" class="btn btn-link">Twitter</a>
+        <a href="#" class="btn btn-link">GitHub</a>
+      </section>
+    </header>{% endif %}
