--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,7 +12,7 @@
 
 {% include header.html %}
 
-<div class="hero bg-gray hero-lg text-center {{textclass}} {{bgclass}} ">
+<div class="hero hero-lg text-center {{textclass}} {{bgclass}} ">
   <div class="hero-body">
     <h1>{{ page.header }}</h1>
     <p>{{ page.subheader }}</p>
