--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,20 @@
+{% assign theme = site.data.vars.theme %}
+
 <!doctype html>
 <html>
   <head>
     <title>{{ page.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.1/dist/cirrus.min.css">-->
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    {% if theme.fonturl != "" and theme.fontname != "" %}
+    <link href="{{ theme.fonturl }}" rel="stylesheet">
+    <style>
+      body {
+        font-family: {{ theme.fontname }} !important;
+      }
+    </style>
+    {% endif %}
   </head>
   <body>
     {% if site.data.vars.shownavbar %}
