--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
     <title>{{ page.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+<!--     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css"> -->
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     {% if vars.theme.fonturl != "" and vars.theme.fontname != "" %}
     <link href="{{ vars.theme.fonturl }}" rel="stylesheet">
     <style>
