--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <link href="{{ vars.theme.fonturl }}" rel="stylesheet">
     <style>
       :root {
-        font-family: {{ vars.theme.fontname }};
+        --font-family: {{ vars.theme.fontname }};
       }
     </style>
     {% endif %}
